Add disqus in episode

--- a/episode.liquid
+++ b/episode.liquid
@@ -63,6 +63,21 @@
 			      </div>
 		      </div>
 
+          <div id="disqus_thread"></div>
+          <script type="text/javascript">
+            var disqus_shortname = 'radio-esperanzah';
+            var disqus_identifier = '{{ episode.slug }}';
+            var disqus_url = '{{ episode.url_for }}';
+
+            var disqus_developer = 1; // developer mode is on
+
+            (function() {
+              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+              dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+          </script>
+
           {% include 're2012/program' %}
         </div>
 
