--- a/stylesheets/episode.scss
+++ b/stylesheets/episode.scss
@@ -57,4 +57,9 @@ body.episode {
 
 }
 
+#disqus_thread {
+    padding: 24px 34px 10px 37px;
+    margin-bottom: 28px;
+    background: url("../images/bg_content_articles.png") repeat-y;
+}
 
