Add podcast section

--- a/show.liquid
+++ b/show.liquid
@@ -80,6 +80,7 @@
         <div class="content_articles">
 
           {% include 're2012/posts' %}
+          {% include 're2012/podcast' %}
           {% include 're2012/program' %}
 
           <div class="articles">
