--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -556,6 +556,27 @@ body.show #archives a {
   margin-left: 10px;
   margin-top: 10px; }
 
+#podcast-url {
+  margin-top: 20px; }
+
+#podcast-url img {
+  float: left;
+  margin-right: 15px; }
+
+#podcast-url p.first {
+  margin-top: 12px; }
+  #podcast-url p.first span {
+    font-size: 18px;
+    font-family: "dine";
+    margin-right: 10px; }
+
+#podcast-url input {
+  width: 250px;
+  display: inline;
+  background-color: #E8FF81;
+  border: 1px solid #777;
+  padding: 2px; }
+
 body.search .description h3 {
   font-family: "dine";
   font-size: 20px; }
