Remove prefixes in includes

--- a/_header_small.liquid
+++ b/_header_small.liquid
@@ -1,8 +1,8 @@
 		  <div id="header">
-        {% include 're2012/header_festival' %}
+        {% include 'header_festival' %}
 
         <div id="smallban">
           <p><a href="{{ show.url_for }}"><strong>Radio Esperanzah!</strong> en direct du 2 au 5 août</a></p>
-          {% include 're2012/header_share' %}
+          {% include 'header_share' %}
 			  </div>
       </div>
