--- a/_program.liquid
+++ b/_program.liquid
@@ -11,33 +11,33 @@
 
                 {% for episode in show.tag.reportage reversed %}
                 {% if forloop.first %}<h3>Reportages</h3>{% endif %}
-                {% include 're2012/program_episode' %}
+                {% include 'program_episode' %}
                 {% endfor %}
 
                 {% for episode in show.tag.jeudi reversed %}
                 {% if forloop.first %}<h3>Jeudi 2 août</h3>{% endif %}
-                {% include 're2012/program_episode' %}
+                {% include 'program_episode' %}
                 {% endfor %}
 
                 {% for episode in show.tag.vendredi reversed %}
                 {% if forloop.first %}<h3>Vendredi 3 août</h3>{% endif %}
-                {% include 're2012/program_episode' %}
+                {% include 'program_episode' %}
                 {% endfor %}
 
                 {% for episode in show.tag.samedi reversed %}
                 {% if forloop.first %}<h3>Samedi 4 août</h3>{% endif %}
-                {% include 're2012/program_episode' %}
+                {% include 'program_episode' %}
                 {% endfor %}
 
                 {% for episode in show.tag.dimanche reversed %}
                 {% if forloop.first %}<h3>Dimanche 5 août</h3>{% endif %}
-                {% include 're2012/program_episode' %}
+                {% include 'program_episode' %}
                 {% endfor %}
 
 
                 {% for episode in show.tag.podcast %}
                 {% if forloop.first %}<h3>Podcast</h3>{% endif %}
-                {% include 're2012/program_episode' %}
+                {% include 'program_episode' %}
                 {% endfor %}
 
                 <div class="clear"></div>
